@@ -2,6 +2,7 @@
 	* Tagging MiniReader-00-00-01
 	* Adding MiniReaderSelectionCuts to define cuts
 	* Adding MiniReaderAuxFunctions containing auxiliary functions
+	* Adding DefineSR defining the signal regions cuts
 
 18-03-2015 Gabriele Bertoli <gbertoli@cern.ch>
 	* Added MiniReaderElectron class
